syntax = "proto3";
package pb;
option go_package = "../pb";

message Opentracing {
	uint64 High = 1;
	uint64 Low = 2;
	uint64 SpanID = 3;
}

message LoginRequest {
	string Token = 1;
	Opentracing Opentracing = 2;
}

message LoginResponse {
	int32 Code = 1;
}

service Parkour {
	rpc Login(LoginRequest) returns (LoginResponse) {}
}

// protoc --go_out=../ --go-grpc_out=../ *.proto
// go install google.golang.org/protobuf/cmd/protoc-gen-go
// go install google.golang.org/grpc/cmd/protoc-gen-go-grpc